# BIM_Nomenclator

./: main.py  nomenclature.db  pyproject.toml  replit.nix  replit_zip_error_log (1).txt  replit_zip_error_log.txt  requeriments.txt  sample_fields.csv  wsgi.py
.github/workflows/: deploy.yml
static/css/: styles.css
static/js/: app.js
templates/: index.html
translations/en/LC_MESSAGES/: messages.po
translations/es/LC_MESSAGES/: messages.po
uploads/: test_mixed_fields.csv  valors.csv
